--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,21 @@
 set up customer booking Page - Done
 set up customer booking logic - Done
-set up employee booking Page - To do next
-set up customer bookings view with delete booking - to do next
-set up employee turn booking into renting logic
+set up employee booking Page - To do next - Done
+set up customer bookings view with delete booking - Done
+set up employee turn booking into renting logic - Done
+
+
+x Priority
+
+// sql //
+3 - Look into triggers (q6)
+2 - Look into indexes (q7)
+1 - Look into sql views (q9)
+
+// UI //
+4 -  Page to update user information (q8)
+1 - Page for the 2 views (q9)
+5 - Add super admin, he has 4 pages, UpdateRoom, UpdateHotel. 
+for each of them, he is prompted with the id, then he can input data in the form and press submit 
+depending on the data entered, it will be used to update the db
+
