--- a/todo.txt
+++ b/todo.txt
@@ -10,7 +10,8 @@ x Priority
 // sql //
 3 - Look into triggers (q6)
 2 - Look into indexes (q7)
-1 - Look into sql views (q9) - DONE
+1 - Look into sql views (q9) - Done
+6-  Fix hotel data
 
 // UI //
 4 -  Page to update user information (q8)
@@ -18,4 +19,5 @@ x Priority
 5 - Add super admin, he has 4 pages, UpdateRoom, UpdateHotel. 
 for each of them, he is prompted with the id, then he can input data in the form and press submit 
 depending on the data entered, it will be used to update the db
-
+7 - Picture consistency
+8 - Messages saying 'no hotel for this area/fdkjshafh' maybe same for other pages such as bookings rentins
